@@ -50,6 +50,10 @@ Revision 4.2.6rc0
 - Fix to CommandGenerator to make sendRequestHandle persistent across
   multiple iterations of GETNEXT/GETBULK queries.
 - Fix to sendNotification() error handling at NotificationOriginator.
+- Fix to preserve possible 'fixed length' setting atrfc1902.OctetString
+  on clone()'ing and subtype()'ing.
+- Fix to rfc1902.OctetString & Bits to base them on OctetString class to
+  make the 'fixed length' property working.
 
 Revision 4.2.5
 --------------
